--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   auto_size_text: ^3.0.0-nullsafety.0
+  provider: ^6.0.5
+  flutter_easyloading: ^3.0.5
+  weather_icons: ^3.0.0
 
 
 dev_dependencies:
@@ -61,9 +64,9 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
